// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`food-record routes DELETE /api/food-record/v1 validates the req body 1`] = `
Array [
  Object {
    "context": Object {
      "label": "value",
    },
    "message": "\\"value\\" is required",
    "path": Array [],
    "type": "any.required",
  },
]
`;

exports[`food-record routes GET /api/food-record/:date/v1 gets records by date 1`] = `
Array [
  Object {
    "Meal": Object {
      "date": "2018-01-01",
      "id": 1,
      "meal": 1,
      "postWorkout": false,
      "public": false,
      "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
      "uuid": "0256e0bb-7890-43a6-b489-e5654120d44a",
    },
    "abbrev": Object {
      "calories": "165",
      "carbohydrates": "0.00",
      "fat": "3.57",
      "foodDesc": Object {
        "CHO_Factor": "3.87",
        "ComName": "",
        "Fat_Factor": "9.02",
        "FdGrp_Cd": 500,
        "Long_Desc": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
        "ManufacName": "",
        "N_Factor": "6.25",
        "Pro_Factor": "4.27",
        "Ref_desc": "19% bone, 9% skin",
        "Refuse": 28,
        "SciName": "",
        "Short_Desc": "CHICKEN,BROILERS OR FRYERS,BRE",
        "Survey": "Y",
        "abbrev_id": 2514,
        "id": 1,
      },
      "gmwt_1": "140",
      "gmwt_2": "52",
      "gmwt_desc1": "1 cup, chopped or diced",
      "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
      "id": 2514,
      "longname": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
      "main": "Chicken",
      "maxMacro": "protein",
      "photo": null,
      "protein": "31.02",
      "sub": "broilers or fryers, breast, meat only, cooked, roasted",
      "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
      "weights": Array [
        Object {
          "abbrev_id": 2514,
          "amount": "0.50",
          "description": "breast, bone and skin removed",
          "gr_wgt": "86.00",
          "id": 3,
          "normalized": Object {
            "txt": "breast, bone and skin removed (172 g)",
            "val": 3,
            "weight": 172,
          },
          "seq": 3,
        },
        Object {
          "abbrev_id": 2514,
          "amount": "1.00",
          "description": "unit (yield from 1 lb ready-to-cook chicken)",
          "gr_wgt": "52.00",
          "id": 2,
          "normalized": Object {
            "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
            "val": 2,
            "weight": 52,
          },
          "seq": 2,
        },
        Object {
          "abbrev_id": 2514,
          "amount": "1.00",
          "description": "cup, chopped or diced",
          "gr_wgt": "140.00",
          "id": 1,
          "normalized": Object {
            "txt": "cup, chopped or diced (140 g)",
            "val": 1,
            "weight": 140,
          },
          "seq": 1,
        },
      ],
    },
    "abbrev_id": 2514,
    "calories": 231,
    "carbohydrates": 0,
    "confirmed": true,
    "date": "2018-07-31",
    "fat": 5,
    "foodDesc": Object {
      "CHO_Factor": "3.87",
      "ComName": "",
      "Fat_Factor": "9.02",
      "FdGrp_Cd": 500,
      "Long_Desc": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
      "ManufacName": "",
      "N_Factor": "6.25",
      "Pro_Factor": "4.27",
      "Ref_desc": "19% bone, 9% skin",
      "Refuse": 28,
      "SciName": "",
      "Short_Desc": "CHICKEN,BROILERS OR FRYERS,BRE",
      "Survey": "Y",
      "abbrev_id": 2514,
      "id": 1,
    },
    "fromprogram": false,
    "gmwt_1": "140",
    "gmwt_2": "52",
    "gmwt_desc1": "1 cup, chopped or diced",
    "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
    "gr": 140,
    "id": 1,
    "main": "Chicken",
    "meal": 1,
    "meal_id": 1,
    "photo": null,
    "protein": 43.4,
    "quantity": 1,
    "seq": 1,
    "sub": "broilers or fryers, breast, meat only, cooked, roasted",
    "unit": "cup, chopped or diced",
    "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
    "weights": Array [
      Object {
        "abbrev_id": 2514,
        "amount": "0.50",
        "description": "breast, bone and skin removed",
        "gr_wgt": "86.00",
        "id": 3,
        "normalized": Object {
          "txt": "breast, bone and skin removed (172 g)",
          "val": 3,
          "weight": 172,
        },
        "seq": 3,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "unit (yield from 1 lb ready-to-cook chicken)",
        "gr_wgt": "52.00",
        "id": 2,
        "normalized": Object {
          "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
          "val": 2,
          "weight": 52,
        },
        "seq": 2,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "cup, chopped or diced",
        "gr_wgt": "140.00",
        "id": 1,
        "normalized": Object {
          "txt": "cup, chopped or diced (140 g)",
          "val": 1,
          "weight": 140,
        },
        "seq": 1,
      },
    ],
  },
  Object {
    "Meal": Object {
      "date": "2018-01-01",
      "id": 1,
      "meal": 1,
      "postWorkout": false,
      "public": false,
      "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
      "uuid": "0256e0bb-7890-43a6-b489-e5654120d44a",
    },
    "abbrev": Object {
      "calories": "165",
      "carbohydrates": "0.00",
      "fat": "3.57",
      "foodDesc": Object {
        "CHO_Factor": "3.87",
        "ComName": "",
        "Fat_Factor": "9.02",
        "FdGrp_Cd": 500,
        "Long_Desc": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
        "ManufacName": "",
        "N_Factor": "6.25",
        "Pro_Factor": "4.27",
        "Ref_desc": "19% bone, 9% skin",
        "Refuse": 28,
        "SciName": "",
        "Short_Desc": "CHICKEN,BROILERS OR FRYERS,BRE",
        "Survey": "Y",
        "abbrev_id": 2514,
        "id": 1,
      },
      "gmwt_1": "140",
      "gmwt_2": "52",
      "gmwt_desc1": "1 cup, chopped or diced",
      "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
      "id": 2514,
      "longname": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
      "main": "Chicken",
      "maxMacro": "protein",
      "photo": null,
      "protein": "31.02",
      "sub": "broilers or fryers, breast, meat only, cooked, roasted",
      "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
      "weights": Array [
        Object {
          "abbrev_id": 2514,
          "amount": "0.50",
          "description": "breast, bone and skin removed",
          "gr_wgt": "86.00",
          "id": 3,
          "normalized": Object {
            "txt": "breast, bone and skin removed (172 g)",
            "val": 3,
            "weight": 172,
          },
          "seq": 3,
        },
        Object {
          "abbrev_id": 2514,
          "amount": "1.00",
          "description": "unit (yield from 1 lb ready-to-cook chicken)",
          "gr_wgt": "52.00",
          "id": 2,
          "normalized": Object {
            "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
            "val": 2,
            "weight": 52,
          },
          "seq": 2,
        },
        Object {
          "abbrev_id": 2514,
          "amount": "1.00",
          "description": "cup, chopped or diced",
          "gr_wgt": "140.00",
          "id": 1,
          "normalized": Object {
            "txt": "cup, chopped or diced (140 g)",
            "val": 1,
            "weight": 140,
          },
          "seq": 1,
        },
      ],
    },
    "abbrev_id": 2514,
    "calories": 231,
    "carbohydrates": 0,
    "confirmed": true,
    "date": "2018-07-31",
    "fat": 5,
    "foodDesc": Object {
      "CHO_Factor": "3.87",
      "ComName": "",
      "Fat_Factor": "9.02",
      "FdGrp_Cd": 500,
      "Long_Desc": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
      "ManufacName": "",
      "N_Factor": "6.25",
      "Pro_Factor": "4.27",
      "Ref_desc": "19% bone, 9% skin",
      "Refuse": 28,
      "SciName": "",
      "Short_Desc": "CHICKEN,BROILERS OR FRYERS,BRE",
      "Survey": "Y",
      "abbrev_id": 2514,
      "id": 1,
    },
    "fromprogram": false,
    "gmwt_1": "140",
    "gmwt_2": "52",
    "gmwt_desc1": "1 cup, chopped or diced",
    "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
    "gr": 140,
    "id": 2,
    "main": "Chicken",
    "meal": 1,
    "meal_id": 1,
    "photo": null,
    "protein": 43.4,
    "quantity": 1,
    "seq": 1,
    "sub": "broilers or fryers, breast, meat only, cooked, roasted",
    "unit": "cup, chopped or diced",
    "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
    "weights": Array [
      Object {
        "abbrev_id": 2514,
        "amount": "0.50",
        "description": "breast, bone and skin removed",
        "gr_wgt": "86.00",
        "id": 3,
        "normalized": Object {
          "txt": "breast, bone and skin removed (172 g)",
          "val": 3,
          "weight": 172,
        },
        "seq": 3,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "unit (yield from 1 lb ready-to-cook chicken)",
        "gr_wgt": "52.00",
        "id": 2,
        "normalized": Object {
          "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
          "val": 2,
          "weight": 52,
        },
        "seq": 2,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "cup, chopped or diced",
        "gr_wgt": "140.00",
        "id": 1,
        "normalized": Object {
          "txt": "cup, chopped or diced (140 g)",
          "val": 1,
          "weight": 140,
        },
        "seq": 1,
      },
    ],
  },
]
`;

exports[`food-record routes GET /api/food-record/micro/:date/v1 gets records by date 1`] = `
Array [
  Object {
    "Meal": Object {
      "date": "2018-01-01",
      "id": 1,
      "meal": 1,
      "postWorkout": false,
      "public": false,
      "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
      "uuid": "0256e0bb-7890-43a6-b489-e5654120d44a",
    },
    "abbrev": Object {
      "abbrevMicro": Object {
        "Alpha_Carot": "0.00",
        "Ash": "1.06",
        "Beta_Carot": "0.00",
        "Beta_Crypt": "0.00",
        "Calcium": "15.00",
        "Cholestrl": "85.00",
        "Choline_Tot": "85.30",
        "Copper": "0.05",
        "FA_Mono": "1.24",
        "FA_Poly": "0.77",
        "FA_Sat": "1.01",
        "Fiber": "0.00",
        "Folate_DFE": "4.00",
        "Folate_Tot": "4.00",
        "Folic_acid": "0.00",
        "Food_Folate": "4.00",
        "Iron": "1.04",
        "Lut_Zea": "0.00",
        "Lycopene": "0.00",
        "Magnesium": "29.00",
        "Manganese": "0.02",
        "Niacin": "13.71",
        "Panto_acid": "0.97",
        "Phosphorus": "228.00",
        "Potassium": "256.00",
        "Retinol": "6.00",
        "Riboflavin": "0.11",
        "Selenium": "27.60",
        "Sodium": "74.00",
        "Sugar": "0.00",
        "Thiamin": "0.07",
        "Vit_A_IU": "21.00",
        "Vit_A_RAE": "6.00",
        "Vit_B12": "0.34",
        "Vit_B6": "0.60",
        "Vit_C": "0.00",
        "Vit_D_IU": "5.00",
        "Vit_D_mcg": "0.10",
        "Vit_E": "0.27",
        "Vit_K": "0.30",
        "Water": "65.26",
        "Zinc": "1.00",
        "abbrev_id": 2514,
        "id": 2514,
      },
      "calories": "165",
      "carbohydrates": "0.00",
      "fat": "3.57",
      "gmwt_1": "140",
      "gmwt_2": "52",
      "gmwt_desc1": "1 cup, chopped or diced",
      "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
      "id": 2514,
      "longname": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
      "main": "Chicken",
      "maxMacro": "protein",
      "photo": null,
      "protein": "31.02",
      "sub": "broilers or fryers, breast, meat only, cooked, roasted",
      "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
      "weights": Array [
        Object {
          "abbrev_id": 2514,
          "amount": "0.50",
          "description": "breast, bone and skin removed",
          "gr_wgt": "86.00",
          "id": 3,
          "normalized": Object {
            "txt": "breast, bone and skin removed (172 g)",
            "val": 3,
            "weight": 172,
          },
          "seq": 3,
        },
        Object {
          "abbrev_id": 2514,
          "amount": "1.00",
          "description": "unit (yield from 1 lb ready-to-cook chicken)",
          "gr_wgt": "52.00",
          "id": 2,
          "normalized": Object {
            "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
            "val": 2,
            "weight": 52,
          },
          "seq": 2,
        },
        Object {
          "abbrev_id": 2514,
          "amount": "1.00",
          "description": "cup, chopped or diced",
          "gr_wgt": "140.00",
          "id": 1,
          "normalized": Object {
            "txt": "cup, chopped or diced (140 g)",
            "val": 1,
            "weight": 140,
          },
          "seq": 1,
        },
      ],
    },
    "abbrevMicro": Object {
      "Alpha_Carot": "0.00",
      "Ash": "1.06",
      "Beta_Carot": "0.00",
      "Beta_Crypt": "0.00",
      "Calcium": "15.00",
      "Cholestrl": "85.00",
      "Choline_Tot": "85.30",
      "Copper": "0.05",
      "FA_Mono": "1.24",
      "FA_Poly": "0.77",
      "FA_Sat": "1.01",
      "Fiber": "0.00",
      "Folate_DFE": "4.00",
      "Folate_Tot": "4.00",
      "Folic_acid": "0.00",
      "Food_Folate": "4.00",
      "Iron": "1.04",
      "Lut_Zea": "0.00",
      "Lycopene": "0.00",
      "Magnesium": "29.00",
      "Manganese": "0.02",
      "Niacin": "13.71",
      "Panto_acid": "0.97",
      "Phosphorus": "228.00",
      "Potassium": "256.00",
      "Retinol": "6.00",
      "Riboflavin": "0.11",
      "Selenium": "27.60",
      "Sodium": "74.00",
      "Sugar": "0.00",
      "Thiamin": "0.07",
      "Vit_A_IU": "21.00",
      "Vit_A_RAE": "6.00",
      "Vit_B12": "0.34",
      "Vit_B6": "0.60",
      "Vit_C": "0.00",
      "Vit_D_IU": "5.00",
      "Vit_D_mcg": "0.10",
      "Vit_E": "0.27",
      "Vit_K": "0.30",
      "Water": "65.26",
      "Zinc": "1.00",
      "abbrev_id": 2514,
      "id": 2514,
    },
    "abbrev_id": 2514,
    "calories": 231,
    "carbohydrates": 0,
    "confirmed": true,
    "date": "2018-07-31",
    "fat": 5,
    "fromprogram": false,
    "gmwt_1": "140",
    "gmwt_2": "52",
    "gmwt_desc1": "1 cup, chopped or diced",
    "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
    "gr": 140,
    "id": 1,
    "main": "Chicken",
    "meal": 1,
    "meal_id": 1,
    "photo": null,
    "protein": 43.4,
    "quantity": 1,
    "seq": 1,
    "sub": "broilers or fryers, breast, meat only, cooked, roasted",
    "unit": "cup, chopped or diced",
    "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
    "weights": Array [
      Object {
        "abbrev_id": 2514,
        "amount": "0.50",
        "description": "breast, bone and skin removed",
        "gr_wgt": "86.00",
        "id": 3,
        "normalized": Object {
          "txt": "breast, bone and skin removed (172 g)",
          "val": 3,
          "weight": 172,
        },
        "seq": 3,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "unit (yield from 1 lb ready-to-cook chicken)",
        "gr_wgt": "52.00",
        "id": 2,
        "normalized": Object {
          "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
          "val": 2,
          "weight": 52,
        },
        "seq": 2,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "cup, chopped or diced",
        "gr_wgt": "140.00",
        "id": 1,
        "normalized": Object {
          "txt": "cup, chopped or diced (140 g)",
          "val": 1,
          "weight": 140,
        },
        "seq": 1,
      },
    ],
  },
  Object {
    "Meal": Object {
      "date": "2018-01-01",
      "id": 1,
      "meal": 1,
      "postWorkout": false,
      "public": false,
      "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
      "uuid": "0256e0bb-7890-43a6-b489-e5654120d44a",
    },
    "abbrev": Object {
      "abbrevMicro": Object {
        "Alpha_Carot": "0.00",
        "Ash": "1.06",
        "Beta_Carot": "0.00",
        "Beta_Crypt": "0.00",
        "Calcium": "15.00",
        "Cholestrl": "85.00",
        "Choline_Tot": "85.30",
        "Copper": "0.05",
        "FA_Mono": "1.24",
        "FA_Poly": "0.77",
        "FA_Sat": "1.01",
        "Fiber": "0.00",
        "Folate_DFE": "4.00",
        "Folate_Tot": "4.00",
        "Folic_acid": "0.00",
        "Food_Folate": "4.00",
        "Iron": "1.04",
        "Lut_Zea": "0.00",
        "Lycopene": "0.00",
        "Magnesium": "29.00",
        "Manganese": "0.02",
        "Niacin": "13.71",
        "Panto_acid": "0.97",
        "Phosphorus": "228.00",
        "Potassium": "256.00",
        "Retinol": "6.00",
        "Riboflavin": "0.11",
        "Selenium": "27.60",
        "Sodium": "74.00",
        "Sugar": "0.00",
        "Thiamin": "0.07",
        "Vit_A_IU": "21.00",
        "Vit_A_RAE": "6.00",
        "Vit_B12": "0.34",
        "Vit_B6": "0.60",
        "Vit_C": "0.00",
        "Vit_D_IU": "5.00",
        "Vit_D_mcg": "0.10",
        "Vit_E": "0.27",
        "Vit_K": "0.30",
        "Water": "65.26",
        "Zinc": "1.00",
        "abbrev_id": 2514,
        "id": 2514,
      },
      "calories": "165",
      "carbohydrates": "0.00",
      "fat": "3.57",
      "gmwt_1": "140",
      "gmwt_2": "52",
      "gmwt_desc1": "1 cup, chopped or diced",
      "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
      "id": 2514,
      "longname": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
      "main": "Chicken",
      "maxMacro": "protein",
      "photo": null,
      "protein": "31.02",
      "sub": "broilers or fryers, breast, meat only, cooked, roasted",
      "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
      "weights": Array [
        Object {
          "abbrev_id": 2514,
          "amount": "0.50",
          "description": "breast, bone and skin removed",
          "gr_wgt": "86.00",
          "id": 3,
          "normalized": Object {
            "txt": "breast, bone and skin removed (172 g)",
            "val": 3,
            "weight": 172,
          },
          "seq": 3,
        },
        Object {
          "abbrev_id": 2514,
          "amount": "1.00",
          "description": "unit (yield from 1 lb ready-to-cook chicken)",
          "gr_wgt": "52.00",
          "id": 2,
          "normalized": Object {
            "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
            "val": 2,
            "weight": 52,
          },
          "seq": 2,
        },
        Object {
          "abbrev_id": 2514,
          "amount": "1.00",
          "description": "cup, chopped or diced",
          "gr_wgt": "140.00",
          "id": 1,
          "normalized": Object {
            "txt": "cup, chopped or diced (140 g)",
            "val": 1,
            "weight": 140,
          },
          "seq": 1,
        },
      ],
    },
    "abbrevMicro": Object {
      "Alpha_Carot": "0.00",
      "Ash": "1.06",
      "Beta_Carot": "0.00",
      "Beta_Crypt": "0.00",
      "Calcium": "15.00",
      "Cholestrl": "85.00",
      "Choline_Tot": "85.30",
      "Copper": "0.05",
      "FA_Mono": "1.24",
      "FA_Poly": "0.77",
      "FA_Sat": "1.01",
      "Fiber": "0.00",
      "Folate_DFE": "4.00",
      "Folate_Tot": "4.00",
      "Folic_acid": "0.00",
      "Food_Folate": "4.00",
      "Iron": "1.04",
      "Lut_Zea": "0.00",
      "Lycopene": "0.00",
      "Magnesium": "29.00",
      "Manganese": "0.02",
      "Niacin": "13.71",
      "Panto_acid": "0.97",
      "Phosphorus": "228.00",
      "Potassium": "256.00",
      "Retinol": "6.00",
      "Riboflavin": "0.11",
      "Selenium": "27.60",
      "Sodium": "74.00",
      "Sugar": "0.00",
      "Thiamin": "0.07",
      "Vit_A_IU": "21.00",
      "Vit_A_RAE": "6.00",
      "Vit_B12": "0.34",
      "Vit_B6": "0.60",
      "Vit_C": "0.00",
      "Vit_D_IU": "5.00",
      "Vit_D_mcg": "0.10",
      "Vit_E": "0.27",
      "Vit_K": "0.30",
      "Water": "65.26",
      "Zinc": "1.00",
      "abbrev_id": 2514,
      "id": 2514,
    },
    "abbrev_id": 2514,
    "calories": 231,
    "carbohydrates": 0,
    "confirmed": true,
    "date": "2018-07-31",
    "fat": 5,
    "fromprogram": false,
    "gmwt_1": "140",
    "gmwt_2": "52",
    "gmwt_desc1": "1 cup, chopped or diced",
    "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
    "gr": 140,
    "id": 2,
    "main": "Chicken",
    "meal": 1,
    "meal_id": 1,
    "photo": null,
    "protein": 43.4,
    "quantity": 1,
    "seq": 1,
    "sub": "broilers or fryers, breast, meat only, cooked, roasted",
    "unit": "cup, chopped or diced",
    "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
    "weights": Array [
      Object {
        "abbrev_id": 2514,
        "amount": "0.50",
        "description": "breast, bone and skin removed",
        "gr_wgt": "86.00",
        "id": 3,
        "normalized": Object {
          "txt": "breast, bone and skin removed (172 g)",
          "val": 3,
          "weight": 172,
        },
        "seq": 3,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "unit (yield from 1 lb ready-to-cook chicken)",
        "gr_wgt": "52.00",
        "id": 2,
        "normalized": Object {
          "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
          "val": 2,
          "weight": 52,
        },
        "seq": 2,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "cup, chopped or diced",
        "gr_wgt": "140.00",
        "id": 1,
        "normalized": Object {
          "txt": "cup, chopped or diced (140 g)",
          "val": 1,
          "weight": 140,
        },
        "seq": 1,
      },
    ],
  },
]
`;

exports[`food-record routes POST /api/food-record/v1 creates a record 1`] = `
Array [
  Object {
    "Meal": Object {
      "createdAt": "2022-11-19T22:47:27.164Z",
      "date": "2022-09-15T04:00:00.000Z",
      "id": 132,
      "meal": 3,
      "postWorkout": false,
      "public": false,
      "updatedAt": "2022-11-19T22:47:27.164Z",
      "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
      "uuid": "d098a37b-d27a-471d-9f67-8bbed1431b43",
    },
    "abbrev": Object {
      "calories": "165",
      "carbohydrates": "0.00",
      "fat": "3.57",
      "foodDesc": Object {
        "CHO_Factor": "3.87",
        "ComName": "",
        "Fat_Factor": "9.02",
        "FdGrp_Cd": 500,
        "Long_Desc": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
        "ManufacName": "",
        "N_Factor": "6.25",
        "Pro_Factor": "4.27",
        "Ref_desc": "19% bone, 9% skin",
        "Refuse": 28,
        "SciName": "",
        "Short_Desc": "CHICKEN,BROILERS OR FRYERS,BRE",
        "Survey": "Y",
        "abbrev_id": 2514,
        "id": 1,
      },
      "gmwt_1": "140",
      "gmwt_2": "52",
      "gmwt_desc1": "1 cup, chopped or diced",
      "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
      "id": 2514,
      "longname": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
      "main": "Chicken",
      "maxMacro": "protein",
      "photo": null,
      "protein": "31.02",
      "sub": "broilers or fryers, breast, meat only, cooked, roasted",
      "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
      "weights": Array [
        Object {
          "abbrev_id": 2514,
          "amount": "1.00",
          "description": "cup, chopped or diced",
          "gr_wgt": "140.00",
          "id": 1,
          "normalized": Object {
            "txt": "cup, chopped or diced (140 g)",
            "val": 1,
            "weight": 140,
          },
          "seq": 1,
        },
        Object {
          "abbrev_id": 2514,
          "amount": "1.00",
          "description": "unit (yield from 1 lb ready-to-cook chicken)",
          "gr_wgt": "52.00",
          "id": 2,
          "normalized": Object {
            "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
            "val": 2,
            "weight": 52,
          },
          "seq": 2,
        },
        Object {
          "abbrev_id": 2514,
          "amount": "0.50",
          "description": "breast, bone and skin removed",
          "gr_wgt": "86.00",
          "id": 3,
          "normalized": Object {
            "txt": "breast, bone and skin removed (172 g)",
            "val": 3,
            "weight": 172,
          },
          "seq": 3,
        },
      ],
    },
    "abbrev_id": 2514,
    "calories": 231,
    "carbohydrates": 0,
    "confirmed": true,
    "date": "2022-09-15",
    "fat": 5,
    "foodDesc": Object {
      "CHO_Factor": "3.87",
      "ComName": "",
      "Fat_Factor": "9.02",
      "FdGrp_Cd": 500,
      "Long_Desc": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
      "ManufacName": "",
      "N_Factor": "6.25",
      "Pro_Factor": "4.27",
      "Ref_desc": "19% bone, 9% skin",
      "Refuse": 28,
      "SciName": "",
      "Short_Desc": "CHICKEN,BROILERS OR FRYERS,BRE",
      "Survey": "Y",
      "abbrev_id": 2514,
      "id": 1,
    },
    "fromprogram": true,
    "gmwt_1": "140",
    "gmwt_2": "52",
    "gmwt_desc1": "1 cup, chopped or diced",
    "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
    "gr": 140,
    "id": 6037,
    "main": "Chicken",
    "meal": 3,
    "meal_id": null,
    "photo": null,
    "protein": 43.4,
    "quantity": 1,
    "seq": 1,
    "sub": "broilers or fryers, breast, meat only, cooked, roasted",
    "unit": "cup, chopped or diced",
    "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
    "weights": Array [
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "cup, chopped or diced",
        "gr_wgt": "140.00",
        "id": 1,
        "normalized": Object {
          "txt": "cup, chopped or diced (140 g)",
          "val": 1,
          "weight": 140,
        },
        "seq": 1,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "unit (yield from 1 lb ready-to-cook chicken)",
        "gr_wgt": "52.00",
        "id": 2,
        "normalized": Object {
          "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
          "val": 2,
          "weight": 52,
        },
        "seq": 2,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "0.50",
        "description": "breast, bone and skin removed",
        "gr_wgt": "86.00",
        "id": 3,
        "normalized": Object {
          "txt": "breast, bone and skin removed (172 g)",
          "val": 3,
          "weight": 172,
        },
        "seq": 3,
      },
    ],
  },
]
`;

exports[`food-record routes POST /api/food-record/v1 validates the req body 1`] = `
Array [
  Object {
    "context": Object {
      "key": "abbrevId",
      "label": "abbrevId",
    },
    "message": "\\"abbrevId\\" is required",
    "path": Array [
      0,
      "abbrevId",
    ],
    "type": "any.required",
  },
  Object {
    "context": Object {
      "key": "date",
      "label": "date",
    },
    "message": "\\"date\\" is required",
    "path": Array [
      0,
      "date",
    ],
    "type": "any.required",
  },
  Object {
    "context": Object {
      "key": "meal",
      "label": "meal",
    },
    "message": "\\"meal\\" is required",
    "path": Array [
      0,
      "meal",
    ],
    "type": "any.required",
  },
  Object {
    "context": Object {
      "key": "quantity",
      "label": "quantity",
    },
    "message": "\\"quantity\\" is required",
    "path": Array [
      0,
      "quantity",
    ],
    "type": "any.required",
  },
  Object {
    "context": Object {
      "key": "unit",
      "label": "unit",
    },
    "message": "\\"unit\\" is required",
    "path": Array [
      0,
      "unit",
    ],
    "type": "any.required",
  },
]
`;

exports[`food-record routes PUT /api/food-record/meal/v1 updates the meal public status to true 1`] = `
Object {
  "date": "2018-01-01",
  "id": 1,
  "meal": 1,
  "postWorkout": false,
  "public": true,
  "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
  "uuid": "0256e0bb-7890-43a6-b489-e5654120d44a",
}
`;

exports[`food-record routes PUT /api/food-record/meal/v1 validates the req - mealId 1`] = `
Array [
  Object {
    "message": "MEAL_NOT_FOUND",
  },
]
`;

exports[`food-record routes PUT /api/food-record/meal/v1 validates the req - req.body 1`] = `
Array [
  Object {
    "context": Object {
      "label": "value",
    },
    "message": "MEAL_ID_REQUIRED",
    "path": Array [],
    "type": "override",
  },
]
`;

exports[`food-record routes PUT /api/food-record/quantity/v1 updates the record quantity 1`] = `
Object {
  "abbrev": Object {
    "calories": "165",
    "carbohydrates": "0.00",
    "fat": "3.57",
    "foodDesc": Object {
      "CHO_Factor": "3.87",
      "ComName": "",
      "Fat_Factor": "9.02",
      "FdGrp_Cd": 500,
      "Long_Desc": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
      "ManufacName": "",
      "N_Factor": "6.25",
      "Pro_Factor": "4.27",
      "Ref_desc": "19% bone, 9% skin",
      "Refuse": 28,
      "SciName": "",
      "Short_Desc": "CHICKEN,BROILERS OR FRYERS,BRE",
      "Survey": "Y",
      "abbrev_id": 2514,
      "id": 1,
    },
    "gmwt_1": "140",
    "gmwt_2": "52",
    "gmwt_desc1": "1 cup, chopped or diced",
    "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
    "id": 2514,
    "longname": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
    "main": "Chicken",
    "maxMacro": "protein",
    "photo": null,
    "protein": "31.02",
    "sub": "broilers or fryers, breast, meat only, cooked, roasted",
    "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
    "weights": Array [
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "cup, chopped or diced",
        "gr_wgt": "140.00",
        "id": 1,
        "normalized": Object {
          "txt": "cup, chopped or diced (140 g)",
          "val": 1,
          "weight": 140,
        },
        "seq": 1,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "1.00",
        "description": "unit (yield from 1 lb ready-to-cook chicken)",
        "gr_wgt": "52.00",
        "id": 2,
        "normalized": Object {
          "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
          "val": 2,
          "weight": 52,
        },
        "seq": 2,
      },
      Object {
        "abbrev_id": 2514,
        "amount": "0.50",
        "description": "breast, bone and skin removed",
        "gr_wgt": "86.00",
        "id": 3,
        "normalized": Object {
          "txt": "breast, bone and skin removed (172 g)",
          "val": 3,
          "weight": 172,
        },
        "seq": 3,
      },
    ],
  },
  "abbrev_id": 2514,
  "calories": 3465,
  "carbohydrates": 0,
  "confirmed": true,
  "date": "2018-07-31",
  "fat": 75,
  "foodDesc": Object {
    "CHO_Factor": "3.87",
    "ComName": "",
    "Fat_Factor": "9.02",
    "FdGrp_Cd": 500,
    "Long_Desc": "Chicken, broilers or fryers, breast, meat only, cooked, roasted",
    "ManufacName": "",
    "N_Factor": "6.25",
    "Pro_Factor": "4.27",
    "Ref_desc": "19% bone, 9% skin",
    "Refuse": 28,
    "SciName": "",
    "Short_Desc": "CHICKEN,BROILERS OR FRYERS,BRE",
    "Survey": "Y",
    "abbrev_id": 2514,
    "id": 1,
  },
  "fromprogram": false,
  "gmwt_1": "140",
  "gmwt_2": "52",
  "gmwt_desc1": "1 cup, chopped or diced",
  "gmwt_desc2": "1 unit,  (yield from 1 lb ready-to-cook chicken)",
  "gr": 2100,
  "id": 1,
  "main": "Chicken",
  "meal": 1,
  "meal_id": 1,
  "photo": null,
  "protein": 651.4,
  "quantity": 15,
  "seq": 1,
  "sub": "broilers or fryers, breast, meat only, cooked, roasted",
  "unit": "cup, chopped or diced",
  "user_uuid": "60f24265-ef45-4891-b4ef-e8fad4435308",
  "weights": Array [
    Object {
      "abbrev_id": 2514,
      "amount": "1.00",
      "description": "cup, chopped or diced",
      "gr_wgt": "140.00",
      "id": 1,
      "normalized": Object {
        "txt": "cup, chopped or diced (140 g)",
        "val": 1,
        "weight": 140,
      },
      "seq": 1,
    },
    Object {
      "abbrev_id": 2514,
      "amount": "1.00",
      "description": "unit (yield from 1 lb ready-to-cook chicken)",
      "gr_wgt": "52.00",
      "id": 2,
      "normalized": Object {
        "txt": "unit (yield from 1 lb ready-to-cook chicken) (52 g)",
        "val": 2,
        "weight": 52,
      },
      "seq": 2,
    },
    Object {
      "abbrev_id": 2514,
      "amount": "0.50",
      "description": "breast, bone and skin removed",
      "gr_wgt": "86.00",
      "id": 3,
      "normalized": Object {
        "txt": "breast, bone and skin removed (172 g)",
        "val": 3,
        "weight": 172,
      },
      "seq": 3,
    },
  ],
}
`;

exports[`food-record routes PUT /api/food-record/quantity/v1 validates the req - id 1`] = `
Array [
  Object {
    "message": "NO_RECORD_FOUND",
  },
]
`;

exports[`food-record routes PUT /api/food-record/quantity/v1 validates the req - req.body 1`] = `
Array [
  Object {
    "context": Object {
      "key": "quantity",
      "label": "quantity",
    },
    "message": "\\"quantity\\" is required",
    "path": Array [
      "quantity",
    ],
    "type": "any.required",
  },
]
`;

exports[`food-record routes PUT /api/food-record/v1 updates the food-record confirmation status 1`] = `Object {}`;

exports[`food-record routes PUT /api/food-record/v1 validates the req - req.body 1`] = `
Array [
  Object {
    "context": Object {
      "label": "value",
    },
    "message": "IDS_REQUIRED",
    "path": Array [],
    "type": "override",
  },
]
`;

exports[`food-record routes PUT /api/food-record/v1 validates the req - req.body.confirmed 1`] = `
Array [
  Object {
    "context": Object {
      "label": "value",
    },
    "message": "CONFIRMED_IS_REQUIRED",
    "path": Array [],
    "type": "override",
  },
]
`;
